# fastapi-ai-boilerplate

./: .gitignore  Makefile  article.md  main.py  pyproject.toml
.claude/commands/: add_service.md
prompts/: how_to_create_command.md  prompt_add service_command.md
src/: main.py  run.py
src/container/: container.py  dependencies.py
src/db/: database.py
src/models/: models.py
src/providers/: message_provider.py
src/repository/: notification_repository.py  order_repository.py  user_repository.py
src/routes/: admin.py  notifications.py  orders.py  users.py
src/services/: notification_service.py  order_service.py  user_service.py
tests/: test_dependencies.py
