[project]
name = "backendfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

